assets/stylesheets/bootstrap.scss
---
---

$enable-negative-margins: true;

$body-bg: #fefef4;

$container-max-widths: (
  sm: 540px,
  md: 720px,
  lg: 960px,
  xl: 1140px,
  xxl: 1320px,
  xxxl: 1920px
);

$font-family-sans-serif: 'Hanken Grotesk', sans-serif;

$card-border-radius: 0;
$card-border-color: transparent;

$badge-border-radius: 0;

@import "bootstrap/bootstrap";

html {
  position: relative;
  min-height: 100%;
}

body {
  margin-bottom: 56px;
  font-size: 1rem;

  @include media-breakpoint-down(lg) {
    font-size:  0.875rem;
  }
}

footer {
  height: 56px;
  line-height: 56px;
  overflow: hidden;
}

article {
  h1 {
    font-size: 3.5rem;
  }

}

/*
 *  Layout
 */

#site-header {
  &.scrolled{
    background-color: $body-bg;
    transition: background-color 200ms linear;
  }
}

.pt-header {
  padding-top: 56px;
}

.sticky-top {
  top: 64px;
}

#toc {
  .nav-link {

    &.active {
      color: $body-color !important;
    }
  }
}

.timeline-segment {
  position: relative;
  border-right: thin solid $gray-400;
}

.timeline-segment::after {
  width: 12px;
  height: 12px;
  border-radius: 6px;
  background-color: $body-color;
  position: absolute;
  top: 12px;
  right: 0;
  margin-top: -6px;
  margin-right: -6px;
  content: ' ';
}

.ratio {
  img {
    object-fit: cover;
  }
}

.ratio-1x1 {
  @include media-breakpoint-up(md) {
    --bs-aspect-ratio: 62.5%; // 16x10
  }
}

